@@ -7,7 +7,7 @@
 {/if}
 {foreach from=$nav item='navitem' name='pos'}
 	<li{if !empty($navitem.selected)} class="current"{/if}>
-		<a href="{$navitem.url}" class="{$navitem.name|lower}"{if isset($navitem.target)} target="_blank"{/if} title="{if !empty($navitem.description)}{$navitem.description}{else}{$navitem.title}{/if}">
+		<a href="{$navitem.url}" class="{$navitem.name|lower}{if $navitem.children} parent{/if}"{if isset($navitem.target)} target="_blank"{/if} title="{if !empty($navitem.description)}{$navitem.description}{else}{$navitem.title}{/if}">
 			{$navitem.title}	
 		</a>
 		{if $depth == '0'}
